<resources>
    <string name="app_name">Task Manager</string>
    <string name="new_task_settings">Add new task</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="meeting">Meeting</string>
    <string name="quarantine">Quarantine</string>
    <string name="create_task">Create Task</string>


    <string name="task_hint">Title</string>
    <string name="desc_hint">Description</string>
    <string name="due_hint">Deadline [dd-MM-yyyy]</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
